# mtg-commander-sim

./: .gitignore  HOW_TO_RUN.md  README.md  pyproject.toml  requirements.txt  test_import.py
data/: example_archidekt.txt  sample_decklist.txt
src/api/: __init__.py
src/core/: __init__.py  cache.py  engine.py  models.py  scryfall.py  tags.py
src/simulation/: __init__.py  batch_runner.py  monte_carlo.py  verify_plausibility.py
tests/: debug_fetch.py  debug_tags.py  extra_land_deck.txt  fetch_land_deck.txt  manual_verify_tapped.py  ramp_deck.txt  test_100_lands.py  test_engine_run.py
tests/integration/: __init__.py  test_scryfall.py
tests/unit/: __init__.py  test_decklist_parsing.py  test_gamestate.py  test_models.py  test_scryfall.py  test_tags.py
